--- a/Auto-Part/Auto-Part-WebUI/Views/Home/Index.cshtml
+++ b/Auto-Part/Auto-Part-WebUI/Views/Home/Index.cshtml
@@ -14,28 +14,25 @@
                 }">
         <div class="intro-slide1 banner banner-fixed" style="background-color: #f0f0f0">
             <figure>
-                <img src="~/assets/images/demos/demo23/slides/1.jpg" alt="banner" width="1903" height="469" />
+                <img src="~/assets/images/bannerr.jpg" alt="banner" width="1903" height="469" />
             </figure>
             <div class="container">
                 <div class="banner-content ml-lg-2 y-50">
                     <div class="slide-animate"
                          data-animation-options="{'name': 'flipInY', 'duration': '.8s'}">
-                        <h4 class="banner-subtitle text-uppercase">Performance &amp; Lifestyle</h4>
+                        <h4 class="banner-subtitle text-uppercase">Onlayn Alış-Veriş</h4>
                         <h3 class="banner-title ls-m text-dark font-weight-bolder">
-                            <span class="font-weight-bold text-primary ls-s">Introducing</span><br />Fashion
-                            Lifestyle<br />Collection
+                            <span class="font-weight-bold text-primary ls-s">Introducing</span><br />-XXXXXXXX-
+                            <br />-XXXXXXXX-
                         </h3>
-                        <a href="~/assets/demo23-shop.html" class="btn btn-dark btn-outline btn-rounded mb-1">
-                            Shop
-                            now <i class="d-icon-arrow-right"></i>
-                        </a>
+                      
                     </div>
                 </div>
             </div>
         </div>
         <div class="intro-slide2 banner banner-fixed" style="background-color: #ececf3">
             <figure>
-                <img src="~/assets/images/demos/demo23/slides/2.jpg" alt="banner" width="1903" height="469" />
+                @*<img src="~/assets/images/demos/demo23/slides/2.jpg" alt="banner" width="1903" height="469" />*@
             </figure>
             <div class="container">
                 <div class="banner-content ml-auto y-50 mr-0">
