--- a/Auto-Part/Auto-Part-WebUI/Views/Shared/_Layout.cshtml
+++ b/Auto-Part/Auto-Part-WebUI/Views/Shared/_Layout.cshtml
@@ -15,7 +15,6 @@
     <meta name="description" content="Riode - eCommerce Template">
     <meta name="author" content="D-THEMES">
 
-    <!-- Favicon -->
     <link rel="icon" type="image/png" href="~/assets/images/icons/favicon.png">
 
     <script>
@@ -56,37 +55,25 @@
             <div class="header-top">
                 <div class="container">
                     <div class="header-left">
-                        <p class="welcome-msg">Welcome to Riode store message or remove it!</p>
+                        <p class="welcome-msg">Eco-Parts Onlayn Marketimizə Xoş Gəldiniz!</p>
                     </div>
                     <div class="header-right">
                         <div class="dropdown">
-                            <a href="~/assets/#currency">USD</a>
-                            <ul class="dropdown-box">
-                                <li><a href="~/assets/#USD">USD</a></li>
-                                <li><a href="~/assets/#EUR">EUR</a></li>
-                            </ul>
+                          
                         </div>
                         <!-- End DropDown Menu -->
                         <div class="dropdown ml-5">
-                            <a href="~/assets/#language">ENG</a>
-                            <ul class="dropdown-box">
-                                <li>
-                                    <a href="~/assets/#USD">ENG</a>
-                                </li>
-                                <li>
-                                    <a href="~/assets/#EUR">FRH</a>
-                                </li>
-                            </ul>
+                            
                         </div>
                         <!-- End DropDown Menu -->
                         <span class="divider"></span>
-                        <a asp-controller="home" asp-action="contact" class="contact d-lg-show"><i class="d-icon-map"></i>Contact</a>
+                        <a asp-controller="home" asp-action="contact" class="contact d-lg-show"><i class="d-icon-map"></i>Bizimlə Əlaqə</a>
                         <a href="~/assets/#" class="help d-lg-show"><i class="d-icon-info"></i> Need Help</a>
                         <a class="login-link" href="~/assets/ajax/login.html" data-toggle="login-modal">
-                            <i class="d-icon-user"></i>Sign in
+                            <i class="d-icon-user"></i>Daxil Ol
                         </a>
                         <span class="delimiter">/</span>
-                        <a class="register-link ml-0" href="~/assets/ajax/login.html" data-toggle="login-modal">Register</a>
+                        <a class="register-link ml-0" href="~/assets/ajax/login.html" data-toggle="login-modal">Qeydiyyat</a>
                         <!-- End of Login -->
                     </div>
                 </div>
@@ -105,13 +92,9 @@
 
                         <div class="header-search hs-simple">
                             <form action="#" method="get" class="input-wrapper">
-                                <div class="select-box">
-                                    <select asp-items="@ViewBag.Categories">
-                                        <option value="">All Categories</option>
-                                    </select>
-                                </div>
+                               
                                 <input type="text" class="form-control" name="search" id="search"
-                                       placeholder="Search..." required="">
+                                       placeholder="Axtardığınız məhsulun kodunu daxil edin ..." required="">
                                 <button class="btn btn-search" type="submit"><i class="d-icon-search"></i></button>
                             </form>
                         </div>
@@ -123,22 +106,22 @@
                                 <i class="d-icon-phone"></i>
                             </div>
                             <div class="icon-box-content d-lg-show">
-                                <h4 class="icon-box-title">Call Us Now:</h4>
-                                <p>0(800) 123-456</p>
+                                <h4 class="icon-box-title">Bizimlə Əlaqə:</h4>
+                                <p>+994507779990</p>
                             </div>
                         </a>
                         <span class="divider"></span>
-                        <a href="~/assets/wishlist.html" class="wishlist">
+                        <a href="~/assets/wishlist.html" class="Seçilmişlər">
                             <i class="d-icon-heart"></i>
                         </a>
                         <span class="divider"></span>
                         <div class="dropdown cart-dropdown type2 cart-offcanvas mr-0 mr-lg-2">
                             <a href="~/assets/#" class="cart-toggle label-block link">
                                 <div class="cart-label d-lg-show">
-                                    <span class="cart-name">Shopping Cart:</span>
+                                    <span class="cart-name">Səbət:</span>
                                     <span class="cart-price">$0.00</span>
                                 </div>
-                                <i class="d-icon-bag"><span class="cart-count">2</span></i>
+                                <i class="d-icon-bag"><span class="cart-count">0</span></i>
                             </a>
                             <div class="cart-overlay"></div>
                             <!-- End Cart Toggle -->
@@ -230,7 +213,7 @@
                         <partial name="_Navbar" />
                     </div>
                     <div class="header-right">
-                        <a href="~/assets/https://d-themes.com/buynow/riodehtml" target="_blank" class="ml-6">Buy Riode!</a>
+                        <a href="~/assets/https://d-themes.com/buynow/riodehtml" target="_blank" class="ml-6">Toyota Prius!</a>
                     </div>
                 </div>
             </div>
