membership complated without logout

--- a/Auto-Part/Auto-Part-WebUI/Areas/Admin/Views/Users/Index.cshtml
+++ b/Auto-Part/Auto-Part-WebUI/Areas/Admin/Views/Users/Index.cshtml
@@ -1,14 +1,14 @@
-﻿@model IEnumerable<Auto_Part_WebUI.Models.Entities.Category>
-
+﻿@model IEnumerable<ECoPartUser>
 @{
     ViewData["Title"] = "Index";
 }
+
 <div class="page-header">
     <div class="row align-items-end">
         <div class="col-lg-8">
             <div class="page-header-title">
                 <div class="d-inline">
-                    <h4>Kateqoriyalar</h4>
+                    <h4>İstifadəçilərin Siyahısı</h4>
                     @*<span>
                             lorem ipsum dolor sit amet, consectetur adipisicing
                             elit
@@ -23,7 +23,7 @@
                         <a asp-action="index" asp-controller="dashboard"> <i class="feather icon-home"></i> </a>
                     </li>
                     <li class="breadcrumb-item" style="float: left;">
-                        <a href="#!">Kateqoriyalar</a>
+                        <a href="#!">İstifadəçilər</a>
                     </li>
                 </ul>
             </div>
@@ -33,93 +33,80 @@
 <div class="page-body">
     <div class="card">
         <div class="card-header">
-            <h5>Kateqoriyalar</h5>
+            <h5>İstifadəçilər</h5>
         </div>
         <div class="card-block table-border-style">
             <div class="table-responsive">
-                <table class="table table-hover tree">
+                <table class="table table-hover">
                     <thead>
                         <tr>
                             <th>
-                                @Html.DisplayNameFor(model => model.Name)
+                                Ad
                             </th>
                             <th>
-                                @Html.DisplayNameFor(model => model.Brand)
+                                Soyad
                             </th>
                             <th>
-                                @Html.DisplayNameFor(model => model.Parent)
+                                İstifadəçi Adı
                             </th>
-                            <th class="actionBtns">
-                                @if (User.HasAccess("admin.categories.create"))
-                                {
-
+                            <th>
+                                Elektron Poçt
+                            </th>
+                            <th>
+                                Elektron Poçt Təsdiqi
+                            </th>
+                            @*@if (User.HasAccess("admin.users.create"))
+                            {
+                                <th class="actionBtns">
                                     <a asp-action="Create" class="btn btn-success btn-icon"><i class="icofont-plus"></i></a>
-                                }
-                            </th>
+                                </th>
+                            }*@
                         </tr>
                     </thead>
                     <tbody>
-                        @foreach (var item in Model.Where(c => c.ParentId == null))
+                        @foreach (var item in Model)
                         {
-                            <tr data-entity-id="@item.Id" class="treegrid-@item.Id">
+                            <tr data-entity-id="@item.Id">
                                 <td>
-                                    @Html.DisplayFor(modelItem => item.Name)
+                                    @item.Name
                                 </td>
                                 <td>
-                                    @Html.DisplayFor(modelItem => item.Brand.Name)
+                                    @item.Surname
                                 </td>
                                 <td>
-                                    @Html.DisplayFor(modelItem => item.Parent.Name)
+                                    @item.UserName
+                                </td>
+                                <td>
+                                    @item.Email
+                                </td>
+                                <td>
+                                    @if (item.EmailConfirmed)
+                                    {
+                                        <span class="badge badge-success">Təsdiqlənib</span>
+                                    }
+                                    else
+                                    {
+                                        <span class="badge badge-warning">Təsdiq Gözləyir</span>
+                                    }
                                 </td>
                                 <td class="actionBtns">
-                                    @if (User.HasAccess("admin.categories.edit"))
+                                    @if (User.HasAccess("admin.users.edit"))
                                     {
                                         <a asp-action="Edit" asp-route-id="@item.Id" class="btn btn-warning btn-icon"><i class="icofont-pencil-alt-5"></i></a>
                                     }
-                                    @if (User.HasAccess("admin.categories.details"))
+                                    @if (User.HasAccess("admin.users.details"))
                                     {
                                         <a asp-action="Details" asp-route-id="@item.Id" class="btn btn-info btn-icon"><i class="icofont icofont-eye-alt"></i></a>
                                     }
-                                    
-                                    @if (User.HasAccess("admin.categories.delete"))
+                                    @if (User.HasAccess("admin.users.delete"))
                                     {
                                         <a onclick="removeEntity(event,@item.Id,'@item.Name')" class="btn btn-danger btn-icon">
                                             <i class="icofont-trash"></i>
                                         </a>
                                     }
+
                                 </td>
                             </tr>
-
-                            @foreach (var child in item.GetAllChildren())
-                            {
-                                <tr data-entity-id="@child.Id" class="treegrid-@child.Id treegrid-parent-@child.ParentId">
-                                    <td>
-                                        @Html.DisplayFor(modelItem => child.Name)
-                                    </td>
-                                    <td>
-                                        @Html.DisplayFor(modelItem => child.Brand.Name)
-                                    </td>
-                                    <td>
-                                        @Html.DisplayFor(modelItem => child.Parent.Name)
-                                    </td>
-                                    <td class="actionBtns">
-                                        @if (User.HasAccess("admin.categories.edit"))
-                                        {
-                                            <a asp-action="Edit" asp-route-id="@child.Id" class="btn btn-warning btn-icon"><i class="icofont-pencil-alt-5"></i></a>
-                                        }
-                                        @if (User.HasAccess("admin.categories.details"))
-                                        {
-                                            <a asp-action="Details" asp-route-id="@child.Id" class="btn btn-info btn-icon"><i class="icofont icofont-eye-alt"></i></a> 
-                                        }
-                                        @if (User.HasAccess("admin.categories.delete"))
-                                        {
-                                            <a onclick="removeEntity(event,@child.Id,'@child.Name')" class="btn btn-danger btn-icon">
-                                                <i class="icofont-trash"></i>
-                                            </a>
-                                        }
-                                    </td>
-                                </tr>
-                            }
                         }
                     </tbody>
                 </table>
@@ -127,16 +114,8 @@
         </div>
     </div>
 </div>
-@section css{
-    <link href="~/libs/jquery-treegrid/css/jquery.treegrid.css" rel="stylesheet" />
-}
+
 @section js{
-    <script src="~/libs/jquery-treegrid/js/jquery.treegrid.js"></script>
-
-    <script type="text/javascript">
-        $('.tree').treegrid();
-    </script>
-
     <script src="~/libs/sweetalert/sweetalert.min.js"></script>
     <script>
         function removeEntity(ev, entityId, name) {
