--- a/Auto-Part/Auto-Part-WebUI/Areas/Admin/Views/_ViewImports.cshtml
+++ b/Auto-Part/Auto-Part-WebUI/Areas/Admin/Views/_ViewImports.cshtml
@@ -1,2 +1,3 @@
 ﻿@addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 @using Auto_Part_WebUI.AppCode.Extensions
+@using Auto_Part_WebUI.Models.Entities.Membership
