--- a/Auto-Part/Auto-Part-WebUI/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/Auto-Part/Auto-Part-WebUI/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -28,7 +28,6 @@
     <link rel="stylesheet" type="text/css" href="~/admin/files/assets/css/jquery.mCustomScrollbar.css">
     <link href="~/libs/toastr.js/toastr.css" rel="stylesheet" />
     <link href="~/admin/files/assets/css/customize.css" rel="stylesheet" />
-
     <style>
         .select2-container--default .select2-selection--single .select2-selection__rendered {
             background-color: unset;
@@ -65,6 +64,13 @@
             height: 35px !important;
             top: 1px !important;
             right: 3px !important;
+        }
+        th.table-row-select,
+        td.table-row-select{
+            width:50px;
+            min-width:50px;
+            max-width:50px;
+            text-align:center;
         }
     </style>
     <link href="~/libs/select2/css/select2.min.css" rel="stylesheet" />
@@ -395,18 +401,33 @@
                                         <span class="pcoded-mtext">Dashboard</span>
                                     </a>
                                 </li>
-                                <li class="">
-                                    <a asp-controller="brands" asp-action="index">
-                                        <span class="pcoded-micon"><i class="icofont-car"></i></span>
-                                        <span class="pcoded-mtext">Maşın Markaları</span>
-                                    </a>
-                                </li>
-                                <li class="">
-                                    <a asp-controller="categories" asp-action="index">
-                                        <span class="pcoded-micon"><i class="icofont-navigation-menu"></i></span>
-                                        <span class="pcoded-mtext">Kateqoriyalar</span>
-                                    </a>
-                                </li>
+                                @if (User.HasAccess("admin.brands.index"))
+                                {
+                                    <li class="">
+                                        <a asp-controller="brands" asp-action="index">
+                                            <span class="pcoded-micon"><i class="icofont-car"></i></span>
+                                            <span class="pcoded-mtext">Maşın Markaları</span>
+                                        </a>
+                                    </li>
+                                }
+                                @if (User.HasAccess("admin.categories.index"))
+                                {
+                                    <li class="">
+                                        <a asp-controller="categories" asp-action="index">
+                                            <span class="pcoded-micon"><i class="icofont-navigation-menu"></i></span>
+                                            <span class="pcoded-mtext">Kateqoriyalar</span>
+                                        </a>
+                                    </li>
+                                }
+                                @if (User.HasAccess("admin.users.index"))
+                                {
+                                    <li class="">
+                                        <a asp-controller="users" asp-action="index">
+                                            <span class="pcoded-micon"><i class="icofont-users"></i></span>
+                                            <span class="pcoded-mtext">İstifadəçilər</span>
+                                        </a>
+                                    </li>
+                                }
                             </ul>
                         </div>
                     </nav>
