--- a/Auto-Part/Auto-Part-WebUI/Areas/Admin/Views/Categories/Index.cshtml
+++ b/Auto-Part/Auto-Part-WebUI/Areas/Admin/Views/Categories/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<Auto_Part_WebUI.Models.Entities.Category>
+﻿@model IEnumerable<Category>
 
 @{
     ViewData["Title"] = "Index";
