--- a/Auto-Part/Auto-Part-WebUI/Areas/Admin/Views/Dashboard/Index.cshtml
+++ b/Auto-Part/Auto-Part-WebUI/Areas/Admin/Views/Dashboard/Index.cshtml
@@ -512,7 +512,7 @@
                                 <div class="col-sm-6">
                                     <p class="m-b-10 f-w-600">Email</p>
                                     <h6 class="text-muted f-w-400">
-                                        jeny@gmail.com
+                                        @User.Identity.AuthenticationType
                                     </h6>
                                 </div>
                                 <div class="col-sm-6">
