--- a/Auto-Part/Auto-Part-WebUI/Areas/Admin/Views/ProductPartCodes/Create.cshtml
+++ b/Auto-Part/Auto-Part-WebUI/Areas/Admin/Views/ProductPartCodes/Create.cshtml
@@ -1,14 +1,15 @@
-﻿@model Brand
+﻿@model ProductPartCode
 
 @{
-    ViewData["Title"] = "Details";
+    ViewData["Title"] = "Create";
 }
+
 <div class="page-header">
     <div class="row align-items-end">
         <div class="col-lg-8">
             <div class="page-header-title">
                 <div class="d-inline">
-                    <h4>Brand</h4>
+                    <h4>Product Part Codes</h4>
                     @*<span>
                             lorem ipsum dolor sit amet, consectetur adipisicing
                             elit
@@ -23,7 +24,7 @@
                         <a asp-action="index" asp-controller="dashboard"> <i class="feather icon-home"></i> </a>
                     </li>
                     <li class="breadcrumb-item" style="float: left;">
-                        <a href="#!">Brand</a>
+                        <a href="#!">Product Part Codes</a>
                     </li>
                 </ul>
             </div>
@@ -33,21 +34,19 @@
 <div class="page-body">
     <div class="card p-3">
         <div class="card-block">
-            <div>
-                <div class="form-group row">
-                    <label asp-for="Name" class="col-sm-2 col-form-label"></label>
-                    <div class="col-sm-10">
-                        <p class="form-control">@Model.Name</p>
-                    </div>
+            <form asp-action="Create">
+                <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+                <div class="form-group">
+                    <label asp-for="Code" class="control-label"></label>
+                    <input asp-for="Code" class="form-control" />
+                    <span asp-validation-for="Code" class="text-danger"></span>
                 </div>
-                <div class="form-group row">
-                    <label class="col-sm-2"></label>
-                    <div class="col-sm-10">
-                        <a asp-action="Edit" asp-route-id="@Model.Id" class="btn btn-warning btn-icon"><i class="icofont-pencil-alt-5"></i></a> |
-                        <a asp-action="Index" class="btn btn-info btn-icon"><i class="icofont-arrow-left"></i></a>
-                    </div>
+                <div class="form-group">
+                    <a asp-action="Index" class="btn btn-info btn-icon"><i class="icofont-arrow-left"></i></a> |
+                    <input type="submit" value="Create" class="btn btn-primary" />
                 </div>
-            </div>
+            </form>
         </div>
     </div>
 </div>
+
