--- a/Auto-Part/Auto-Part-WebUI/Areas/Admin/Views/ProductPartCodes/Details.cshtml
+++ b/Auto-Part/Auto-Part-WebUI/Areas/Admin/Views/ProductPartCodes/Details.cshtml
@@ -1,4 +1,4 @@
-﻿@model Category
+﻿@model ProductPartCode
 
 @{
     ViewData["Title"] = "Details";
@@ -9,7 +9,7 @@
         <div class="col-lg-8">
             <div class="page-header-title">
                 <div class="d-inline">
-                    <h4>Kateqoriya</h4>
+                    <h4>Product Part Codes</h4>
                     @*<span>
                             lorem ipsum dolor sit amet, consectetur adipisicing
                             elit
@@ -24,7 +24,7 @@
                         <a asp-action="index" asp-controller="dashboard"> <i class="feather icon-home"></i> </a>
                     </li>
                     <li class="breadcrumb-item" style="float: left;">
-                        <a href="#!">Kateqoriya</a>
+                        <a href="#!">Product Part Codes</a>
                     </li>
                 </ul>
             </div>
@@ -36,28 +36,9 @@
         <div class="card-block">
             <div>
                 <div class="form-group row">
-                    <label asp-for="Name" class="col-sm-2 col-form-label"></label>
+                    <label asp-for="Code" class="col-sm-2 col-form-label"></label>
                     <div class="col-sm-10">
-                        <p class="form-control">@Model.Name</p>
-                    </div>
-                </div>
-                <div class="form-group row">
-                    <label asp-for="Parent" class="col-sm-2 col-form-label"></label>
-                    <div class="col-sm-10">
-                        @if (Model.Parent != null)
-                        {
-                            <p class="form-control">@Model.Parent.Name</p>
-                        }
-                        else
-                        {
-                            <p class="form-control">(Ana Kateqoriyadır)</p>
-                        }
-                    </div>
-                </div>
-                <div class="form-group row">
-                    <label asp-for="Brand" class="col-sm-2 col-form-label"></label>
-                    <div class="col-sm-10">
-                        <p class="form-control">@Model.Brand.Name</p>
+                        <p class="form-control">@Model.Code</p>
                     </div>
                 </div>
                 <div class="form-group row">
