--- a/Auto-Part/Auto-Part-WebUI/Areas/Admin/Views/ProductPartCodes/Edit.cshtml
+++ b/Auto-Part/Auto-Part-WebUI/Areas/Admin/Views/ProductPartCodes/Edit.cshtml
@@ -1,14 +1,15 @@
-﻿@model Category
+﻿@model ProductPartCode
 
 @{
     ViewData["Title"] = "Edit";
 }
+
 <div class="page-header">
     <div class="row align-items-end">
         <div class="col-lg-8">
             <div class="page-header-title">
                 <div class="d-inline">
-                    <h4>Kateqoriya</h4>
+                    <h4>Product Part Code</h4>
                     @*<span>
                             lorem ipsum dolor sit amet, consectetur adipisicing
                             elit
@@ -23,7 +24,7 @@
                         <a asp-action="index" asp-controller="dashboard"> <i class="feather icon-home"></i> </a>
                     </li>
                     <li class="breadcrumb-item" style="float: left;">
-                        <a href="#!">Kateqoriya</a>
+                        <a href="#!">Product Part Code</a>
                     </li>
                 </ul>
             </div>
@@ -36,26 +37,9 @@
             <form asp-action="Edit">
                 <div asp-validation-summary="ModelOnly" class="text-danger"></div>
                 <div class="form-group">
-                    <label asp-for="Name" class="control-label"></label>
-                    <input asp-for="Name" class="form-control" />
-                    <span asp-validation-for="Name" class="text-danger"></span>
-                </div>
-                <div class="form-group">
-                    <label asp-for="Brand" class="control-label"></label>
-                    <select asp-for="BrandId" class="form-control select2" asp-items="ViewBag.BrandId">
-                        <option disabled>---Birini Seçin---</option>
-                    </select>
-                    <span asp-validation-for="BrandId" class="text-danger"></span>
-                </div>
-                <div class="form-group">
-                    <label asp-for="Parent" class="control-label"></label>
-                    <select asp-for="ParentId" class="form-control select2" asp-items="ViewBag.ParentId">
-                        @if (Model.ParentId == null)
-                        {
-                            <option selected disabled>---Birini Seçin---</option>
-                        }
-                    </select>
-                    <span asp-validation-for="ParentId" class="text-danger"></span>
+                    <label asp-for="Code" class="control-label"></label>
+                    <input asp-for="Code" class="form-control" />
+                    <span asp-validation-for="Code" class="text-danger"></span>
                 </div>
                 <input type="hidden" asp-for="Id" />
                 <div class="form-group">
@@ -66,4 +50,3 @@
         </div>
     </div>
 </div>
-
