--- a/Auto-Part/Auto-Part-WebUI/Areas/Admin/Views/ProductTypes/Create.cshtml
+++ b/Auto-Part/Auto-Part-WebUI/Areas/Admin/Views/ProductTypes/Create.cshtml
@@ -1,14 +1,14 @@
-﻿@model Category
+﻿@model ProductType
 
 @{
-    ViewData["Title"] = "Edit";
+    ViewData["Title"] = "Create";
 }
 <div class="page-header">
     <div class="row align-items-end">
         <div class="col-lg-8">
             <div class="page-header-title">
                 <div class="d-inline">
-                    <h4>Kateqoriya</h4>
+                    <h4>Product Type</h4>
                     @*<span>
                             lorem ipsum dolor sit amet, consectetur adipisicing
                             elit
@@ -23,7 +23,7 @@
                         <a asp-action="index" asp-controller="dashboard"> <i class="feather icon-home"></i> </a>
                     </li>
                     <li class="breadcrumb-item" style="float: left;">
-                        <a href="#!">Kateqoriya</a>
+                        <a href="#!">Product Type</a>
                     </li>
                 </ul>
             </div>
@@ -33,7 +33,7 @@
 <div class="page-body">
     <div class="card p-3">
         <div class="card-block">
-            <form asp-action="Edit">
+            <form asp-action="Create">
                 <div asp-validation-summary="ModelOnly" class="text-danger"></div>
                 <div class="form-group">
                     <label asp-for="Name" class="control-label"></label>
@@ -41,26 +41,8 @@
                     <span asp-validation-for="Name" class="text-danger"></span>
                 </div>
                 <div class="form-group">
-                    <label asp-for="Brand" class="control-label"></label>
-                    <select asp-for="BrandId" class="form-control select2" asp-items="ViewBag.BrandId">
-                        <option disabled>---Birini Seçin---</option>
-                    </select>
-                    <span asp-validation-for="BrandId" class="text-danger"></span>
-                </div>
-                <div class="form-group">
-                    <label asp-for="Parent" class="control-label"></label>
-                    <select asp-for="ParentId" class="form-control select2" asp-items="ViewBag.ParentId">
-                        @if (Model.ParentId == null)
-                        {
-                            <option selected disabled>---Birini Seçin---</option>
-                        }
-                    </select>
-                    <span asp-validation-for="ParentId" class="text-danger"></span>
-                </div>
-                <input type="hidden" asp-for="Id" />
-                <div class="form-group">
                     <a asp-action="Index" class="btn btn-info btn-icon"><i class="icofont-arrow-left"></i></a> |
-                    <input type="submit" value="Save" class="btn btn-primary" />
+                    <input type="submit" value="Create" class="btn btn-primary" />
                 </div>
             </form>
         </div>
