--- a/Auto-Part/Auto-Part-WebUI/Areas/Admin/Views/ProductTypes/Details.cshtml
+++ b/Auto-Part/Auto-Part-WebUI/Areas/Admin/Views/ProductTypes/Details.cshtml
@@ -1,15 +1,14 @@
-﻿@model Category
+﻿@model ProductType
 
 @{
     ViewData["Title"] = "Details";
 }
-
 <div class="page-header">
     <div class="row align-items-end">
         <div class="col-lg-8">
             <div class="page-header-title">
                 <div class="d-inline">
-                    <h4>Kateqoriya</h4>
+                    <h4>Product Type</h4>
                     @*<span>
                             lorem ipsum dolor sit amet, consectetur adipisicing
                             elit
@@ -24,7 +23,7 @@
                         <a asp-action="index" asp-controller="dashboard"> <i class="feather icon-home"></i> </a>
                     </li>
                     <li class="breadcrumb-item" style="float: left;">
-                        <a href="#!">Kateqoriya</a>
+                        <a href="#!">Product Type</a>
                     </li>
                 </ul>
             </div>
@@ -39,25 +38,6 @@
                     <label asp-for="Name" class="col-sm-2 col-form-label"></label>
                     <div class="col-sm-10">
                         <p class="form-control">@Model.Name</p>
-                    </div>
-                </div>
-                <div class="form-group row">
-                    <label asp-for="Parent" class="col-sm-2 col-form-label"></label>
-                    <div class="col-sm-10">
-                        @if (Model.Parent != null)
-                        {
-                            <p class="form-control">@Model.Parent.Name</p>
-                        }
-                        else
-                        {
-                            <p class="form-control">(Ana Kateqoriyadır)</p>
-                        }
-                    </div>
-                </div>
-                <div class="form-group row">
-                    <label asp-for="Brand" class="col-sm-2 col-form-label"></label>
-                    <div class="col-sm-10">
-                        <p class="form-control">@Model.Brand.Name</p>
                     </div>
                 </div>
                 <div class="form-group row">
