--- a/Auto-Part/Auto-Part-WebUI/Areas/Admin/Views/Users/Details.cshtml
+++ b/Auto-Part/Auto-Part-WebUI/Areas/Admin/Views/Users/Details.cshtml
@@ -58,6 +58,12 @@
                     </div>
                 </div>
                 <div class="form-group row">
+                    <label asp-for="StoreName" class="col-sm-2 col-form-label"></label>
+                    <div class="col-sm-10">
+                        <p class="form-control">@Model.StoreName</p>
+                    </div>
+                </div>
+                <div class="form-group row">
                     <div class="col-12">
                         <div class="tab-control" role="tabcontrol">
                             <div class="tab-page" id="roles" aria-title="Rollar" selected>
@@ -121,7 +127,6 @@
                 <div class="form-group row">
                     <label class="col-sm-2"></label>
                     <div class="col-sm-10">
-                        <a asp-action="Edit" asp-route-id="@Model.Id" class="btn btn-warning btn-icon"><i class="icofont-pencil-alt-5"></i></a> |
                         <a asp-action="Index" class="btn btn-info btn-icon"><i class="icofont-arrow-left"></i></a>
                     </div>
                 </div>
