--- a/Auto-Part/Auto-Part-WebUI/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/Auto-Part/Auto-Part-WebUI/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -437,10 +437,10 @@
                                         </a>
                                     </li>
                                 }
-                                @if (User.HasAccess("admin.productpartcodes.index"))
+                                @if (User.HasAccess("admin.partcodes.index"))
                                 {
                                     <li class="">
-                                        <a asp-controller="productpartcodes" asp-action="index">
+                                        <a asp-controller="partcodes" asp-action="index">
                                             <span class="pcoded-micon"><i class="fa-solid fa-barcode"></i></span>
                                             <span class="pcoded-mtext">Məhsul Kodu</span>
                                         </a>
