--- a/Auto-Part/Auto-Part-WebUI/Areas/Admin/Views/PartCodes/Create.cshtml
+++ b/Auto-Part/Auto-Part-WebUI/Areas/Admin/Views/PartCodes/Create.cshtml
@@ -1,4 +1,4 @@
-﻿@model ProductPartCode
+﻿@model PartCode
 
 @{
     ViewData["Title"] = "Create";
@@ -37,9 +37,9 @@
             <form asp-action="Create">
                 <div asp-validation-summary="ModelOnly" class="text-danger"></div>
                 <div class="form-group">
-                    <label asp-for="Code" class="control-label"></label>
-                    <input asp-for="Code" class="form-control" />
-                    <span asp-validation-for="Code" class="text-danger"></span>
+                    <label asp-for="Name" class="control-label"></label>
+                    <input asp-for="Name" class="form-control" />
+                    <span asp-validation-for="Name" class="text-danger"></span>
                 </div>
                 <div class="form-group">
                     <a asp-action="Index" class="btn btn-info btn-icon"><i class="icofont-arrow-left"></i></a> |
