--- a/Auto-Part/Auto-Part-WebUI/Areas/Admin/Views/PartCodes/Index.cshtml
+++ b/Auto-Part/Auto-Part-WebUI/Areas/Admin/Views/PartCodes/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<ProductPartCode>
+﻿@model IEnumerable<PartCode>
 
 @{
     ViewData["Title"] = "Index";
@@ -41,7 +41,7 @@
                     <thead>
                         <tr>
                             <th>
-                                @Html.DisplayNameFor(model => model.Code)
+                                @Html.DisplayNameFor(model => model.Name)
                             </th>
                             <th class="actionBtns">
                                 <a asp-action="Create" class="btn btn-success btn-icon"><i class="icofont-plus"></i></a>
@@ -53,12 +53,12 @@
                         {
                             <tr data-entity-id="@item.Id">
                                 <td>
-                                    @Html.DisplayFor(modelItem => item.Code)
+                                    @Html.DisplayFor(modelItem => item.Name)
                                 </td>
                                 <td class="actionBtns">
                                     <a asp-action="Edit" asp-route-id="@item.Id" class="btn btn-warning btn-icon"><i class="icofont-pencil-alt-5"></i></a> |
                                     <a asp-action="Details" asp-route-id="@item.Id" class="btn btn-info btn-icon"><i class="icofont icofont-eye-alt"></i></a> |
-                                    <a onclick="removeEntity(event,@item.Id,'@item.Code')" class="btn btn-danger btn-icon">
+                                    <a onclick="removeEntity(event,@item.Id, '@item.Name')" class="btn btn-danger btn-icon">
                                         <i class="icofont-trash"></i>
                                     </a>
                                 </td>
