--- a/Auto-Part/Auto-Part-WebUI/Areas/Admin/Views/Products/Details.cshtml
+++ b/Auto-Part/Auto-Part-WebUI/Areas/Admin/Views/Products/Details.cshtml
@@ -3,64 +3,82 @@
 @{
     ViewData["Title"] = "Details";
 }
-
-<h1>Details</h1>
-
-<div>
-    <h4>Product</h4>
-    <hr />
-    <dl class="row">
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Name)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Name)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Category)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Category.Name)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.ShortDescription)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.ShortDescription)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.ImagePath)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.ImagePath)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.CreatedById)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.CreatedById)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.CreatedDate)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.CreatedDate)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.DeletedById)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.DeletedById)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.DeletedDate)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.DeletedDate)
-        </dd>
-    </dl>
+<div class="page-header">
+    <div class="row align-items-end">
+        <div class="col-lg-8">
+            <div class="page-header-title">
+                <div class="d-inline">
+                    <h4>Məhsul</h4>
+                    @*<span>
+                            lorem ipsum dolor sit amet, consectetur adipisicing
+                            elit
+                        </span>*@
+                </div>
+            </div>
+        </div>
+        <div class="col-lg-4">
+            <div class="page-header-breadcrumb">
+                <ul class="breadcrumb-title">
+                    <li class="breadcrumb-item" style="float: left;">
+                        <a asp-action="index" asp-controller="dashboard"> <i class="feather icon-home"></i> </a>
+                    </li>
+                    <li class="breadcrumb-item" style="float: left;">
+                        <a href="#!">Məhsul</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </div>
 </div>
-<div>
-    <a asp-action="Edit" asp-route-id="@Model.Id">Edit</a> |
-    <a asp-action="Index">Back to List</a>
+<div class="page-body">
+    <div class="card p-3">
+        <div class="card-block">
+            <div>
+                <div class="form-group row">
+                    <label asp-for="Name" class="col-sm-2 col-form-label"></label>
+                    <div class="col-sm-10">
+                        <p class="form-control">@Model.Name</p>
+                    </div>
+                </div>
+                <div class="form-group row">
+                    <label asp-for="Category" class="col-sm-2 col-form-label"></label>
+                    <div class="col-sm-10">
+                        <p class="form-control">@Model.Category.Name</p>
+                    </div>
+                </div>
+                <div class="form-group row">
+                    <label asp-for="Category.Brand" class="col-sm-2 col-form-label"></label>
+                    <div class="col-sm-10">
+                        <p class="form-control">@Model.Category.Brand.Name</p>
+                    </div>
+                </div>
+                <div class="form-group row">
+                    <label asp-for="ImagePath" style="display: flex; align-items: center;" class="col-sm-2 col-form-label"></label>
+                    <div class="col-sm-10">
+                        <img style="width:150px;" src="~/uploads/images/@Model.ImagePath" />
+                    </div>
+                </div>
+                <div class="form-group row">
+                    <label asp-for="ShortDescription" class="col-sm-2 col-form-label"></label>
+                    <div class="col-sm-10">
+                        <p class="form-control">@Model.ShortDescription</p>
+                    </div>
+                </div>
+                <div class="form-group row">
+                    <label asp-for="PartCodeName" class="col-sm-2 col-form-label"></label>
+                    <div class="col-sm-10">
+                        <p class="form-control">@Model.PartCodeName</p>
+                    </div>
+                </div>
+                <div class="form-group row">
+                    <label class="col-sm-2"></label>
+                    <div class="col-sm-10">
+                        <a asp-action="Edit" asp-route-id="@Model.Id" class="btn btn-warning btn-icon"><i class="icofont-pencil-alt-5"></i></a> |
+                        <a asp-action="Index" class="btn btn-info btn-icon"><i class="icofont-arrow-left"></i></a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 </div>
+
